# projector-ui-rxr

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  log  log.txt  realsense
docker/: Dockerfile  Dockerfile.old  Makefile.old  docker-compose.yml
other/: calibration_math.m
src/: button.py  calibration.py  clicker.py  main.py  master.py  math_utils.py  mediapipe_handler.py  mediapipe_pose.py  mediapipe_pose_.py  parent.py  plane_detection.py  realsense_handler.py  touch_detection.py  utils.py  window.py
workspace/install/: setup.sh
workspace/install/pubsub/lib/pubsub/: publisher  subscriber
workspace/install/pubsub/share/pubsub/: package.bash  package.sh  package.zsh
workspace/install/sample/lib/sample/: sample_package
workspace/install/sample/share/sample/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/usb_cam/share/ament_index/resource_index/rclcpp_components/: usb_cam
workspace/install/usb_cam/share/usb_cam/: package.sh
workspace/install/usb_cam/share/usb_cam/cmake/: usb_camConfig.cmake
workspace/log/: latest_build
workspace/src/get-started-ros2/: CmakeLists.txt  test.cpp
workspace/src/imgtest/: CMakeList.txt
workspace/src/imgtest/src/: image_subscriber.cpp  test.py
workspace/src/install/: setup.sh
workspace/src/log/: latest_build
workspace/src/pubsub/: CMakeLists.txt  package.xml
workspace/src/pubsub/src/: publisher.cpp  subscriber.cpp
workspace/src/sample/: CMakeLists.txt
workspace/src/sample/src/: sample.cpp
workspace/src/usb_cam/: CMakeLists.txt  package.xml
